# mortgage_calculator

./: .gitignore  Makefile  README.md  app.py  deploy.sh  env.example  pyproject.toml  render.yaml  render.yaml.backup  requirements.txt
static/css/: style.css
static/js/: script.js
templates/: error.html  index.html  results.html
tests/: test_app.py
